--- a/static/Back/assets/css/style.css
+++ b/static/Back/assets/css/style.css
@@ -294,15 +294,17 @@ nav button {
     border-radius: 15px;
     width: 100%;
     box-sizing: border-box;
+    margin-top: 10px;
     padding: 10px;
     text-align: center;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    margin-top: 10px;
 }
 
 nav button:hover {
-    background: #d4d4d4;
+    background: #0c5de9;
 }
 
 
@@ -353,3 +355,5 @@ main form button {
 .assistant.message {
     background: #000000;
 }
+
+  
