--- a/templates/chat2.html
+++ b/templates/chat2.html
@@ -79,6 +79,7 @@
           id="u_input"
           name="u_input"
           placeholder="Put the job description to have a new CV."
+          style="width: 100%;"
         />
         <button type="submit" id="submitBtn">Send</button>
       </form>
