--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -64,9 +64,10 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>features</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="{{ url_for('cv_generator') }}" class="dropdown-item" target="_blank">Build your CV</a>
-                            <a href="#" class="dropdown-item">Enhance your CV</a>
+                            <a href="{{ url_for('doc') }}" class="dropdown-item">Enhance your CV</a>
+                            <a href="{{ url_for('chat') }}" class="dropdown-item">Job description to CV</a>
                             <a href="{{ url_for('index') }}" class="dropdown-item">Interview Prep</a>
+                            <!-- <a href="http://192.168.31.98:8501" class="dropdown-item">Dashboard Trulens</a> -->
                         </div>
                     </div>
                 </div>
