--- a/templates/test.html
+++ b/templates/test.html
@@ -58,12 +58,12 @@
                 </a>
                 <div class="d-flex align-items-center ms-4 mb-4">
                     <div class="position-relative">
-                        <img class="rounded-circle" src="../static/Back/assets/img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                        <img class="rounded-circle" src="{{info_user.Photo}}" alt="" style="width: 40px; height: 40px;">
                         <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
                     </div>
                     <div class="ms-3">
-                        <h6 class="mb-0">Jhon Doe</h6>
-                        <span>Admin</span>
+                        <h6 class="mb-0">{{ session["First_name"] }} {{ session["Last_name"] }}</h6>
+                        <span>{{info_user.Title}}</span>
                     </div>
                 </div>
                 <div class="navbar-nav w-100">
@@ -72,9 +72,9 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>features</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="{{ url_for('cv_generator') }}" class="dropdown-item"target="_blank">Build your CV</a>
-                            <a href="#" class="dropdown-item active">Enhance your CV</a>
-                            <a href="{{ url_for('index') }}" class="dropdown-item">Interview Prep</a>
+                            <a href="{{ url_for('doc') }}" class="dropdown-item">Enhance your CV</a>
+                            <a href="{{ url_for('chat') }}" class="dropdown-item">Job description to CV</a>
+                            <a href="{{ url_for('index') }}" class="dropdown-item active">Interview Prep</a>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                         <div class="dropdown-menu dropdown-menu-end bg-secondary border-0 rounded-0 rounded-bottom m-0">
                             <a href="#" class="dropdown-item">
                                 <div class="d-flex align-items-center">
-                                    <img class="rounded-circle" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                                    <img class="rounded-circle" src="{{info_user.Photo}}" alt="" style="width: 40px; height: 40px;">
                                     <div class="ms-2">
                                         <h6 class="fw-normal mb-0">Jhon send you a message</h6>
                                         <small>15 minutes ago</small>
@@ -114,7 +114,7 @@
                             <hr class="dropdown-divider">
                             <a href="#" class="dropdown-item">
                                 <div class="d-flex align-items-center">
-                                    <img class="rounded-circle" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                                    <img class="rounded-circle" src="{{info_user.Photo}}" alt="" style="width: 40px; height: 40px;">
                                     <div class="ms-2">
                                         <h6 class="fw-normal mb-0">Jhon send you a message</h6>
                                         <small>15 minutes ago</small>
@@ -124,7 +124,7 @@
                             <hr class="dropdown-divider">
                             <a href="#" class="dropdown-item">
                                 <div class="d-flex align-items-center">
-                                    <img class="rounded-circle" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                                    <img class="rounded-circle" src="{{info_user.Photo}}" alt="" style="width: 40px; height: 40px;">
                                     <div class="ms-2">
                                         <h6 class="fw-normal mb-0">Jhon send you a message</h6>
                                         <small>15 minutes ago</small>
@@ -161,8 +161,8 @@
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                            <img class="rounded-circle me-lg-2" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
-                            <span class="d-none d-lg-inline-flex">John Doe</span>
+                            <img class="rounded-circle me-lg-2" src="{{info_user.Photo}}" alt="" style="width: 40px; height: 40px;">
+                            <span class="d-none d-lg-inline-flex">{{session["First_name"]}} {{ session["Last_name"] }}</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-secondary border-0 rounded-0 rounded-bottom m-0">
                             <a href="#" class="dropdown-item">My Profile</a>
@@ -247,10 +247,10 @@
 
 
 <!-- Footer Start -->
-<div class="container-fluid pt-4 px-4">
+<div class="container-fluid pt-4 px-4" hidden>
 <div class="bg-secondary rounded-top p-4">
     
-    <div class="row">
+    <div class="row" >
         <div class="col-12 col-sm-6 text-center text-sm-start">
             &copy; <a href="#">Your Site Name</a>, All Right Reserved. 
         </div>
